# pyCRT

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  pylintrc  pyproject.toml  rCRT-tools.py  rCRTtools.py  requirements.txt  setup.py
docs/source/: conf.py  configuring.rst  index.md  index.rst  introduction.rst  modules.rst  propertiesPCRT.rst  pyCRT.rst  pyrCRT.rst  usage.md  usage.rst
src/: rCRTtools.py
src/pyCRT/: __init__.py  arrayOperations.py  arrayPlotting.py  configFiles.py  curveFitting.py  frameOperations.py  simpleUI.py  videoReading.py
src/pyCRT/cameraConfigs/: DFK23UP031.toml  genericCamera.toml  logitechC525.toml  x230Integrated.toml
src/pyrCRT/: __init__.py  _processTestData.py  _rCRTArq.npz  _rcrtArq.npz  _readTestData.py  _readTestVideo.py  _testData.npz  arrayOperations.py  arrayPlotting.py  curveFitting.py  frameOperations.py  rcrtArq.npz  simpleUI.py  videoReading.py
